--- a/exercises/module1/1.4./style.css
+++ b/exercises/module1/1.4./style.css
@@ -1,9 +1,11 @@
 
-
+body{
+    background-color: bisque;
+}
 
 h1{
     text-align: center;
-    background-color: antiquewhite;
+    background-color: rgb(194, 137, 63);
     margin-right: 30%;
     margin-left: 30%;
     font-style: oblique;
@@ -21,7 +23,7 @@ h1{
 }
 
 #orange{
-    background-color: rgb(255, 255, 255);
+    
     border-style :double;
     margin-left: 40%;
     margin-right: 40%;
@@ -32,7 +34,7 @@ h1{
 }
 
 #green{
-    background-color: rgb(255, 255, 255);
+   
     border-style :double;
     margin-left: 40%;
     margin-right: 40%;
@@ -42,3 +44,23 @@ h1{
     margin-top: 3%;
 }
 
+.circle{
+    border-radius: 50%;
+    position: relative;
+    width: 15%;
+}
+
+.circle.red{
+  background-color: rgb(255, 0, 0);
+    box-shadow: 0 0 20px 5px red; 
+}
+
+.circle.orange{
+    background-color: orange;
+    box-shadow: 0 0 20px 5px orange; 
+}
+
+.circle.green{
+    background-color: green;
+    box-shadow: 0 0 20px 5px green; 
+}
