--- a/exercises/module2/2.2/my-movie/src/stylesheets/main.css
+++ b/exercises/module2/2.2/my-movie/src/stylesheets/main.css
@@ -1,10 +1,12 @@
-body { 
+
+body {
     display: flex;
-    flex-direction: column;
     background-image : url(../img/backround.jpg);
+    flex-direction: column;
     background-size : cover;
-    
+
 }
+
 
 header {
    background-color: rgb(195, 72, 72);
@@ -24,4 +26,16 @@ footer{
     height: 50px;
     text-align: center;
     background-color:rgb(195, 72, 72) ;
+}
+
+#spiderman , #hulk {
+   display: inline-block;
+   
+}
+
+.movieContainer{
+    margin: auto;
+  width: 60%;
+  border: 3px solid #9a351c;
+  padding: 10px;
 }
